// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import a registration should give me a CSV template when I request it 1`] = `
[
  "addressCity",
  "addressHouseNumber",
  "addressHouseNumberAddition",
  "addressPostalCode",
  "addressStreet",
  "fullName",
  "paymentAmountMultiplier",
  "phoneNumber",
  "preferredLanguage",
  "programFinancialServiceProviderConfigurationName",
  "referenceId",
  "whatsappPhoneNumber",
]
`;

exports[`Import a registration should throw an error when a required a fsp attribute is missing 1`] = `
[
  {
    "column": "whatsappPhoneNumber",
    "error": "Cannot update 'whatsappPhoneNumber' is required for the FSP: 'Intersolve-voucher-whatsapp'",
    "lineNumber": 1,
  },
]
`;

exports[`Import a registration should throw an error when uploading a non existing fsp 1`] = `
[
  {
    "column": "programFinancialServiceProviderConfigurationName",
    "error": "FinancialServiceProviderConfigurationName non-existing-fsp not found in program. Allowed values: Intersolve-voucher-whatsapp, bank_a, fsp_all_attributes, fsp_no_attributes, ironBank, gringotts",
    "lineNumber": 0,
    "value": "non-existing-fsp",
  },
]
`;

exports[`Import a registration should throw an error with a dropdown registration atribute set to null 1`] = `
[
  {
    "column": "house",
    "error": "Value 'null' is not in the allowed options: 'lannister, stark, greyjoy' for attribute 'house'",
    "lineNumber": 1,
    "value": null,
  },
]
`;

exports[`Import a registration should throw an error with a numeric registration atribute set to null 1`] = `
[
  {
    "column": "addressHouseNumber",
    "error": "Cannot update/set addressHouseNumber with a nullable value as it is required for the FSP: Intersolve-visa",
    "lineNumber": 1,
    "value": null,
  },
]
`;
